--- a/css/style.less
+++ b/css/style.less
@@ -1,6 +1,8 @@
 @base: #efefef;
 @netra_color:#4E8506;
 @the-border: 1px;
+@basefont:"tahoma";
+@baseImage:url('../images/bg.png');
 
 //common style
 .fixed{
@@ -68,7 +70,7 @@
   opacity:    @opacity;
 }
 
-.gradient (@startColor: #eee, @endColor: white) {
+.gradient (@startColor: #4E4E4E, @endColor: #1c1c1c) {
   background-color: @startColor;
   background: -webkit-gradient(linear, left top, left bottom, from(@startColor), to(@endColor));
   background: -webkit-linear-gradient(top, @startColor, @endColor);
@@ -76,7 +78,7 @@
   background: -ms-linear-gradient(top, @startColor, @endColor);
   background: -o-linear-gradient(top, @startColor, @endColor);
 }
-.horizontal-gradient (@startColor: #eee, @endColor: white) {
+.horizontal-gradient (@startColor: #4E4E4E, @endColor: #1c1c1c) {
   background-color: @startColor;
   background-image: -webkit-gradient(linear, left top, right top, from(@startColor), to(@endColor));
   background-image: -webkit-linear-gradient(left, @startColor, @endColor);
@@ -152,18 +154,23 @@ html{
   padding:0;
 }
 body{
-    background:@base;
+    background:@baseImage repeat;
     margin:0;
     padding:0;
 }
 
 #header{
+  font-family:@basefont;
+  top:0;
+  .gradient();
+  color:#fff;
   width:100%;
   height:40px;
-  background-color:@netra_color;
-  .fixed;
+  box-shadow:(#fff);
   .navigation {
       font-size: 12px;
+      width:980px;
+      margin:0 auto;
    }
    .logo {
       width: 300px;
@@ -174,11 +181,22 @@ body{
   width:960px;
   padding:0 10px;
   margin:0 auto;
-  height:300px;
+  overflow:hidden;
+  min-height:200px;
   background:#ccc;
-  margin-top:50px;
-}
-
+  margin-bottom:20px;
   
+}
+#section-main{
+  width:100%;
+  float:left;
+  min-height:500px;
+  background:#000;
+  .main-container{
+    width:980px;
+    margin:0 auto;
+    height:500px;
+    background:#fff;
+  }
 }
 
