--- a/css/style.less
+++ b/css/style.less
@@ -159,44 +159,19 @@ body{
     padding:0;
 }
 
-#header{
+#csi-header{
   font-family:@basefont;
   top:0;
   .gradient();
   color:#fff;
   width:100%;
-  height:40px;
-  box-shadow:(#fff);
-  .navigation {
-      font-size: 12px;
-      width:980px;
-      margin:0 auto;
-   }
-   .logo {
-      width: 300px;
-      &:hover { text-decoration: none }
-   }
+  height:50px;
+  float:left;
 }
-#container{
-  width:960px;
-  padding:0 10px;
+#csi-container{
+  width:100%;
   margin:0 auto;
   overflow:hidden;
-  min-height:200px;
-  background:#ccc;
-  margin-bottom:20px;
   
-}
-#section-main{
-  width:100%;
-  float:left;
-  min-height:500px;
-  background:#000;
-  .main-container{
-    width:980px;
-    margin:0 auto;
-    height:500px;
-    background:#fff;
-  }
 }
 
