--- a/css/style.less
+++ b/css/style.less
@@ -165,7 +165,8 @@ body{
   .gradient();
   color:#fff;
   width:100%;
-  height:50px;
+  height:48px;
+  margin-botton:35px;
   float:left;
 }
 #csi-container{
@@ -173,5 +174,16 @@ body{
   margin:0 auto;
   overflow:hidden;
   
+}
+#csi-slide{
+  width:100%;
+  min-height:500px;
+  float:left;
+  background:#ff6600;
+
+}
+#csi-footer{
+  .top{}
+  .bottom{}
 }
 
